# src/main/java/com/agpaluch/exchange/currency/controller/ExchangeCurrencyController.java
@@ -1,13 +1,16 @@
 package com.agpaluch.exchange.currency.controller;
 
+import com.agpaluch.exchange.currency.api.AccountBalanceApi;
 import com.agpaluch.exchange.currency.api.CreateAccountApi;
 import com.agpaluch.exchange.currency.api.ExchangeApi;
 import com.agpaluch.exchange.currency.exceptions.AccountNotFoundException;
 import com.agpaluch.exchange.currency.exceptions.ExchangeRatesNotFoundException;
 import com.agpaluch.exchange.currency.exceptions.InvalidBalanceException;
+import com.agpaluch.exchange.currency.model.AccountBalanceDTO;
 import com.agpaluch.exchange.currency.model.AccountCreatedDTO;
 import com.agpaluch.exchange.currency.model.CreateAccountDTO;
 import com.agpaluch.exchange.currency.model.ExchangeCurrencyDTO;
+import com.agpaluch.exchange.currency.service.AccountBalanceService;
 import com.agpaluch.exchange.currency.service.CreateAccountService;
 import com.agpaluch.exchange.currency.service.ExchangeCurrencyService;
 import lombok.RequiredArgsConstructor;
@@ -15,14 +18,16 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
 
+import java.util.List;
 import java.util.Optional;
 
 @RestController
 @RequiredArgsConstructor
-public class ExchangeCurrencyController implements CreateAccountApi, ExchangeApi {
+public class ExchangeCurrencyController implements CreateAccountApi, ExchangeApi, AccountBalanceApi {
 
     private final CreateAccountService createAccountService;
     private final ExchangeCurrencyService exchangeCurrencyService;
+    private final AccountBalanceService accountBalanceService;
 
     @Override
     public ResponseEntity<AccountCreatedDTO> createAccount(CreateAccountDTO createAccountDto) throws InvalidBalanceException {
@@ -33,6 +38,12 @@ public class ExchangeCurrencyController implements CreateAccountApi, ExchangeApi
     public ResponseEntity<Void> exchangeCurrency(String accountNumber, ExchangeCurrencyDTO exchangeCurrencyDTO) throws AccountNotFoundException, InvalidBalanceException, ExchangeRatesNotFoundException {
         exchangeCurrencyService.exchangeCurrency(accountNumber, exchangeCurrencyDTO);
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<List<AccountBalanceDTO>> getAccountBalance(String accountNumber) throws AccountNotFoundException {
+        List<AccountBalanceDTO> accountBalances = accountBalanceService.getAccountBalance(accountNumber);
+        return ResponseEntity.ok().body(accountBalances);
     }
 
     @Override
